<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#000000"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/textViewSetName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/nazwa_zestawu"
        android:textSize="25sp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#e0da2f"
        android:textColor="@color/black"
        android:text="@string/edytuj" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#e0da2f"
        android:textColor="@color/black"
        android:text="@string/usu" />
</LinearLayout>