<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#404040">

    <Button
        android:id="@+id/Powrot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#e0da2f"
        android:drawableRight="@drawable/baseline_arrow_back"
        android:layout_marginBottom="200dp"/>

    <Button
        android:id="@+id/buttonFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#e0da2f"
        android:text="@string/pytania_zamkni_te"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:layout_marginBottom="16dp" />

    <!-- Drugi przycisk -->
    <Button
        android:id="@+id/buttonSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#e0da2f"
        android:text="@string/pytania_otwarte"
        android:textColor="@android:color/black"
        android:textSize="35sp"
        android:layout_marginBottom="16dp" />

    <!-- Trzeci przycisk -->
    <Button
        android:id="@+id/buttonThird"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#e0da2f"
        android:text="@string/sprawd_si"
        android:textColor="@android:color/black"
        android:textSize="35sp" />

</LinearLayout>
