<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="editWordViewModel"
            type="com.example.verbo.editword.EditWordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#404040"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/editWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="150dp"
            android:backgroundTint="#e0da2f"
            android:hint="@string/podaj_s_wko"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="40sp"
            android:text="@={editWordViewModel.question}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editWordTranslate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#e0da2f"
            android:hint="@string/podaj_t_umaczenie"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="40sp"
            android:text="@={editWordViewModel.answer}"
            app:layout_constraintTop_toBottomOf="@+id/editWord" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/Zapisz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#e0da2f"
                android:textColor="@color/black"
                android:text="@string/zapisz"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/Anuluj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#e0da2f"
                android:textColor="@color/black"
                android:text="@string/anuluj"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>