<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="wordViewModel"
            type="com.example.verbo.viewmodels.FlashcardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="#404040"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/word_definition_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="150dp"
            android:backgroundTint="#e0da2f"
            android:hint="@string/podaj_s_wko"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="40sp"
            android:text="@={wordViewModel.wordDefinition}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/word_translation_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#e0da2f"
            android:hint="@string/podaj_t_umaczenie"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="40sp"
            android:text="@={wordViewModel.wordTranslation}"
            app:layout_constraintTop_toBottomOf="@+id/word_definition_edit_text" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/save_flashcard_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#e0da2f"
                android:textColor="@color/black"
                android:text="@string/save"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#e0da2f"
                android:textColor="@color/black"
                android:text="@string/cancel"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>